--- a/index.html
+++ b/index.html
@@ -33,6 +33,13 @@
         <section class="sec1">
           <h1>Ефективні рішення для вашого бізнесу</h1>
           <button class="button" type="button">Замовити послугу</button>
+          <dialog >
+            <div class="close">
+              <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 18 18" fill="none">
+                <path d="M15 4.10786L13.8921 3L9.5 7.39214L5.10786 3L4 4.10786L8.39214 8.5L4 12.8921L5.10786 14L9.5 9.60786L13.8921 14L15 12.8921L10.6079 8.5L15 4.10786Z" fill="black"/>
+              </svg>
+            </div>
+          </dialog>
         </section>
       </div>
       
